Изменена схема БД. Удалены некоторые сущности. Реализованы CRUD операции со сущностью "Product". Функционал требует доработки из-за багов.

--- a/Electro.WebApplication/Areas/Admin/Views/Categories/Save.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Categories/Save.cshtml
@@ -72,6 +72,7 @@
                                             {
                                                 <option value="@category.Id">@category.Name</option>
                                             }
+                                            <option value="@null">Отсутствует</option>
                                         }
                                     </select>
                                     <span class="invalid-feedback" style="display: block;" asp-validation-for="Category.ParentId"></span>
