--- a/Electro.WebApplication/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -46,19 +46,11 @@
             </a>
         </li>
         <li>
-            <a asp-area="Admin" asp-controller="Quantities" asp-action="Index">
+            <a asp-area="Admin" asp-controller="Products" asp-action="Index">
                 <div class="parent-icon">
-                    <i class="bx bx-atom"></i>
+                    <i class="bx bx-package"></i>
                 </div>
-                <div class="menu-title">Величины</div>
-            </a>
-        </li>
-        <li>
-            <a asp-area="Admin" asp-controller="Units" asp-action="Index">
-                <div class="parent-icon">
-                    <i class="bx bx-ruler"></i>
-                </div>
-                <div class="menu-title">Единицы измерения</div>
+                <div class="menu-title">Товары</div>
             </a>
         </li>
         <li>
