--- a/Electro.WebApplication/Areas/Admin/Views/Characteristics/_FormCharacteristicCategoryPartial.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Characteristics/_FormCharacteristicCategoryPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CharacteristicCategoryViewModel
 <form id="form-characteristic-category-section" method="post">
+    <input type="hidden" asp-for="CharacteristicCategory.Id" />
     <input type="hidden" asp-for="CharacteristicCategory.CharacteristicId" />
     @if (Model.Categories != null)
     {
@@ -13,14 +14,6 @@
                 <input type="hidden" asp-for="@Model.Categories[i].Parent.Id" />
                 <input type="hidden" asp-for="@Model.Categories[i].Parent.Name" />
             }
-        }
-    }
-    @if (Model.SectionsCharacteristics != null)
-    {
-        @for (int i = 0; i < Model.SectionsCharacteristics.Count; i++)
-        {
-            <input type="hidden" asp-for="@Model.SectionsCharacteristics[i].Id" />
-            <input type="hidden" asp-for="@Model.SectionsCharacteristics[i].Name" />
         }
     }
     <div class="form-group row">
@@ -43,6 +36,7 @@
         <div class="col-sm-10">
             <select id="single-select-sections-characteristic-by-category" class="single-select" asp-for="CharacteristicCategory.SectionId" required>
                 @if (Model.SectionsCharacteristics != null)
+                {
                     @foreach (var sectionCharacteristic in Model.SectionsCharacteristics)
                     {
                         <option value="@sectionCharacteristic.Id">@sectionCharacteristic.Name</option>
@@ -57,7 +51,7 @@
         <div class="col-sm-10 d-flex flex-row justify-content-start align-items-center">
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="custom-control-input" id="custom-switch-use-when-filtering" asp-for="CharacteristicCategory.UseWhenFiltering">
-                <label class="custom-control-label" for="custom-switch-use-when-filtering">Да/Нет</label>
+                <label class="custom-control-label" for="custom-switch-use-when-filtering">Нет/Да</label>
             </div>
         </div>
     </div>
@@ -66,7 +60,7 @@
         <div class="col-sm-10 d-flex flex-row justify-content-start align-items-center">
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="custom-control-input" id="custom-switch-use-when-displaying-as-basic-information" asp-for="CharacteristicCategory.UseWhenDisplayingAsBasicInformation">
-                <label class="custom-control-label" for="custom-switch-use-when-displaying-as-basic-information">Да/Нет</label>
+                <label class="custom-control-label" for="custom-switch-use-when-displaying-as-basic-information">Нет/Да</label>
             </div>
         </div>
     </div>
