--- a/Electro.WebApplication/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Categories/Index.cshtml
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/plugins/datatable/css/dataTables.bootstrap4.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/plugins/datatable/css/buttons.bootstrap4.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2-bootstrap4.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/custom.css" asp-append-version="true" />
 }
 @{
@@ -23,6 +25,68 @@
                             <li class="breadcrumb-item active" aria-current="page">Категории</li>
                         </ol>
                     </nav>
+                </div>
+            </div>
+            <div class="card radius-15">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4 class="mb-0">Фильтры</h4>
+                    </div>
+                    <hr />
+                    <div class="form-body">
+                        <form method="post" action="/Admin/Categories/Index">
+                            <input id="input-hidden-number-page" type="hidden" asp-for="@Model.Filters.NumberPage" />
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Показать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.ItemsPerPage">
+                                        @foreach (var limit in Model.Limits)
+                                        {
+                                            <option value="@limit">@limit</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Сортировать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.SortingOption">
+                                        @for (int i = 0; i < Model.SortingOptions.Count; i++)
+                                        {
+                                            <option value="@Model.SortingOptions.ElementAt(i).Key">@Model.SortingOptions.ElementAt(i).Value</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Родительская категория</label>
+                                <div class="col-sm-10">
+                                    <select id="single-select-parent-categories" class="single-select" asp-for="@Model.Filters.ParentCategoryId">
+                                        @if (Model.ParentCategories != null ? Model.ParentCategories.Count > 0 : false)
+                                        {
+                                            @foreach (var parentCategory in Model.ParentCategories)
+                                            {
+                                                <option value="@parentCategory.Id">@parentCategory.Name</option>
+                                            }
+                                        }
+                                        <option value="@null">Отсутствует</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Строка поиска</label>
+                                <div class="col-sm-10">
+                                    <input id="input-text-search-string" type="text" class="form-control" asp-for="@Model.Filters.SearchString" />
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="submit" class="btn btn-light px-4" value="Применить" />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="card">
@@ -45,78 +109,69 @@
                     <hr />
                     <div class="table-responsive">
                         <div id="table-categories_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                            <table id="table-categories" class="table table-striped table-bordered" style="width:100%">
-                                <thead>
-                                    <tr>
-                                        <th>Фото</th>
-                                        <th>Наименование</th>
-                                        <th>Родительская категория</th>
-                                        <th>Действия</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var category in Model.Categories)
-                                    {
-                                        <tr>
-                                            <td>
-                                                <div class="container-image">
-                                                    <img src="@(category.Photo != null ? category.Photo.Url : "")" />
-                                                </div>
-                                            </td>
-                                            <td>@category.Name</td>
-                                            <td>@(category.Parent != null ? category.Parent.Name : "Отсутствует")</td>
-                                            <td>
-                                                <div class="btn-group pull-right">
-                                                    <a asp-area="Admin" asp-controller="Categories" asp-action="Save" asp-route-id="@category.Id">
-                                                        <button class="btn btn-sm btn-default">
-                                                            <span class="fa fa-edit">
-
-                                                            </span>
-                                                        </button>
-                                                    </a>
-                                                    <a asp-area="Admin" asp-controller="Categories" asp-action="Delete" asp-route-id="@category.Id">
-                                                        <button class="btn btn-sm btn-default">
-                                                            <span class="fa fa-trash">
-
-                                                            </span>
-                                                        </button>
-                                                    </a>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <th>Фото</th>
-                                        <th>Наименование</th>
-                                        <th>Родительская категория</th>
-                                        <th>Действия</th>
-                                    </tr>
-                                </tfoot>
-                            </table>
                             <div class="row">
-                                <div class="col-sm-12 col-md-5">
-                                    <div class="dataTables_info" id="table-manufacturers_info" role="status" aria-live="polite">
-                                        @Model.Pagination.GetFormattedStringRange()
-                                    </div>
-                                </div>
-                                <div class="col-sm-12 col-md-7">
-                                    <div class="dataTables_paginate paging_simple_numbers" id="table-manufacturers_paginate">
-                                        <ul class="pagination">
-                                            <li class="paginate_button page-item previous" id="table-manufacturers_previous"><a href="#" aria-controls="table-manufacturers" data-dt-idx="0" tabindex="0" class="page-link">Prev</a></li>
-                                            <li class="paginate_button page-item "><a href="#" aria-controls="table-manufacturers" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>
-                                            <li class="paginate_button page-item disabled" id="table-manufacturers_ellipsis"><a href="#" aria-controls="table-manufacturers" data-dt-idx="2" tabindex="0" class="page-link">…</a></li>
-                                            <li class="paginate_button page-item "><a href="#" aria-controls="table-manufacturers" data-dt-idx="3" tabindex="0" class="page-link">129</a></li>
-                                            <li class="paginate_button page-item active"><a href="#" aria-controls="table-manufacturers" data-dt-idx="4" tabindex="0" class="page-link">130</a></li>
-                                            <li class="paginate_button page-item "><a href="#" aria-controls="table-manufacturers" data-dt-idx="5" tabindex="0" class="page-link">131</a></li>
-                                            <li class="paginate_button page-item disabled" id="table-manufacturers_ellipsis"><a href="#" aria-controls="table-manufacturers" data-dt-idx="6" tabindex="0" class="page-link">…</a></li>
-                                            <li class="paginate_button page-item "><a href="#" aria-controls="table-manufacturers" data-dt-idx="7" tabindex="0" class="page-link">183</a></li>
-                                            <li class="paginate_button page-item next" id="table-manufacturers_next"><a href="#" aria-controls="table-manufacturers" data-dt-idx="8" tabindex="0" class="page-link">Next</a></li>
-                                        </ul>
-                                    </div>
+                                <div class="col-sm-12">
+                                    <table id="table-categories" class="table table-striped table-bordered" style="width:100%">
+                                        <thead>
+                                            <tr>
+                                                <th>Фото</th>
+                                                <th>Наименование</th>
+                                                <th>Родительская категория</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var category in Model.Categories)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        <div class="container-image">
+                                                            <img src="@(category.Photo != null ? category.Photo.Url : "")" />
+                                                        </div>
+                                                    </td>
+                                                    <td>@category.Name</td>
+                                                    <td>@(category.Parent != null ? category.Parent.Name : "Отсутствует")</td>
+                                                    <td>
+                                                        <div class="btn-group pull-right">
+                                                            <a asp-area="Admin" asp-controller="Categories" asp-action="Save" asp-route-id="@category.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-edit">
+
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                            <a asp-area="Admin" asp-controller="Categories" asp-action="Delete" asp-route-id="@category.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-trash">
+
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th>Фото</th>
+                                                <th>Наименование</th>
+                                                <th>Родительская категория</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
                                 </div>
                             </div>
+                            <nav class="d-md-flex justify-content-between align-items-center border-top pt-3" aria-label="Page navigation example">
+                                <div class="text-center text-md-left mb-3 mb-md-0 dataTables_info">@Model.Pagination.GetFormattedStringRange()</div>
+                                <ul class="pagination mb-0 pagination-shop justify-content-center justify-content-md-start">
+                                    @foreach (var item in Model.Pagination.GeneratePagination())
+                                    {
+                                        <li class="paginate_button page-item @(Model.Pagination.NumberPage == item ? "active" : "")"><a class="page-link" data-number-page="@item">@item</a></li>
+                                    }
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
@@ -126,7 +181,52 @@
 </div>
 @section ScriptPage
 {
+    <script src="~/plugins/select2/js/select2.min.js" asp-append-version="true"></script>
     <script>
+        $('#single-select-parent-categories').select2({
+            width: '100%',
+            theme: 'bootstrap4',
+            placeholder: $(this).data('placeholder'),
+            allowClear: Boolean($(this).data('allow-clear')),
+            ajax: {
+                url: '/Admin/Categories/ParentCategories',
+                type: 'post',
+                data: function (obj) {
+                    return { searchString: obj.term };
+                },
+                dataType: 'json',
+                processResults: function (data, params) {
+                    return {
+                        results: data.results
+                    };
+                },
+                success: function (data) {
+                    if (data.results !== 'undefined') {
+                        let options = "";
 
+                        $.each(data.results, function (i, value) {
+                            options += '<option value="' + value.id + '">' + value.text + '</option>';
+                        })
+
+                        $('#single-select-parent-categories').html();
+                        $('#single-select-parent-categories').html(options);
+
+                        $('#single-select-parent-categories').trigger('change');
+                    }
+                }
+            }
+        });
+
+        $('input[type="submit"]').on('click', function (e) {
+            $('#input-hidden-number-page').val(1);
+            $('form').submit();
+        });
+
+        $('.page-link').each(function () {
+            $(this).on('click', function (e) {
+                $('#input-hidden-number-page').val($(this).attr('data-number-page'));
+                $('form').submit();
+            });
+        });
     </script>
 }
