--- a/Electro.WebApplication/Areas/Admin/Views/Products/Index.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/Products/Index.cshtml
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/plugins/datatable/css/dataTables.bootstrap4.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/plugins/datatable/css/buttons.bootstrap4.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/plugins/select2/css/select2-bootstrap4.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/custom.css" asp-append-version="true" />
 }
 @{
@@ -25,6 +27,83 @@
                     </nav>
                 </div>
             </div>
+            <div class="card radius-15">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4 class="mb-0">Фильтры</h4>
+                    </div>
+                    <hr />
+                    <div class="form-body">
+                        <form method="post" action="/Admin/Products/Index">
+                            <input id="input-hidden-number-page" type="hidden" asp-for="@Model.Filters.NumberPage" />
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Показать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.ItemsPerPage">
+                                        @foreach (var limit in Model.Limits)
+                                        {
+                                            <option value="@limit">@limit</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Сортировать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.SortingOption">
+                                        @for (int i = 0; i < Model.SortingOptions.Count; i++)
+                                        {
+                                            <option value="@Model.SortingOptions.ElementAt(i).Key">@Model.SortingOptions.ElementAt(i).Value</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Категория</label>
+                                <div class="col-sm-10">
+                                    <select id="single-select-categories" class="single-select" asp-for="@Model.Filters.CategoryId">
+                                        @if (Model.Categories != null ? Model.Categories.Count > 0 : false)
+                                        {
+                                            @foreach (var category in Model.Categories)
+                                            {
+                                                <option value="@category.Id">@category.Name</option>
+                                            }
+                                        }
+                                        <option value="@null">Отсутствует</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Производитель</label>
+                                <div class="col-sm-10">
+                                    <select id="single-select-manufacturers" class="single-select" asp-for="@Model.Filters.ManufacturerId">
+                                        @if (Model.Manufacturers != null ? Model.Manufacturers.Count > 0 : false)
+                                        {
+                                            @foreach (var manufacturer in Model.Manufacturers)
+                                            {
+                                                <option value="@manufacturer.Id">@manufacturer.Name</option>
+                                            }
+                                        }
+                                        <option value="@null">Отсутствует</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Строка поиска</label>
+                                <div class="col-sm-10">
+                                    <input id="input-text-search-string" type="text" class="form-control" asp-for="@Model.Filters.SearchString" />
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="submit" class="btn btn-light px-4" value="Применить" />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">
@@ -44,70 +123,165 @@
                     </div>
                     <hr />
                     <div class="table-responsive">
-                        <table id="table-products" class="table table-striped table-bordered" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Фотография</th>
-                                    <th>Категория товара</th>
-                                    <th>Производитель</th>
-                                    <th>Модель</th>
-                                    <th>Действия</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var product in Model.Products)
-                                {
-                                    <tr>
-                                        <td>
-                                            <div class="container-image">
-                                                <img src="~/@(product.MainPhoto != null ? product.MainPhoto.Url : "")" />
-                                            </div>
-                                        </td>
-                                        <td>@product.Category.Name</td>
-                                        <td>@product.Manufacturer.Name</td>
-                                        <td>@product.Model</td>
-                                        <td>
-                                            <div class="btn-group pull-right">
-                                                <a asp-area="Admin" asp-controller="Products" asp-action="Save" asp-route-id="@product.Id">
-                                                    <button class="btn btn-sm btn-default">
-                                                        <span class="fa fa-edit">
+                        <div id="table-categories_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="table-products" class="table table-striped table-bordered" style="width:100%">
+                                        <thead>
+                                            <tr>
+                                                <th>Фотография</th>
+                                                <th>Категория товара</th>
+                                                <th>Производитель</th>
+                                                <th>Модель</th>
+                                                <th>Дата создания</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var product in Model.Products)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        <div class="container-image">
+                                                            <img src="@(product.MainPhoto?.GetPhotoUrl())" />
+                                                        </div>
+                                                    </td>
+                                                    <td>@product.Category.Name</td>
+                                                    <td>@product.Manufacturer.Name</td>
+                                                    <td>@product.Model</td>
+                                                    <th>@product.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")</th>
+                                                    <td>
+                                                        <div class="btn-group pull-right">
+                                                            <a asp-area="Admin" asp-controller="Products" asp-action="Save" asp-route-id="@product.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-edit">
 
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                                <a asp-area="Admin" asp-controller="Products" asp-action="Delete" asp-route-id="@product.Id">
-                                                    <button class="btn btn-sm btn-default">
-                                                        <span class="fa fa-trash">
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                            <a asp-area="Admin" asp-controller="Products" asp-action="Delete" asp-route-id="@product.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-trash">
 
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th>Фотография</th>
-                                    <th>Категория товара</th>
-                                    <th>Производитель</th>
-                                    <th>Модель</th>
-                                    <th>Действия</th>
-                                </tr>
-                            </tfoot>
-                        </table>
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th>Фотография</th>
+                                                <th>Категория товара</th>
+                                                <th>Производитель</th>
+                                                <th>Модель</th>
+                                                <th>Дата создания</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </div>
+                            <nav class="d-md-flex justify-content-between align-items-center border-top pt-3" aria-label="Page navigation example">
+                                <div class="text-center text-md-left mb-3 mb-md-0 dataTables_info">@Model.Pagination.GetFormattedStringRange()</div>
+                                <ul class="pagination mb-0 pagination-shop justify-content-center justify-content-md-start">
+                                    @foreach (var item in Model.Pagination.GeneratePagination())
+                                    {
+                                        <li class="paginate_button page-item @(Model.Pagination.NumberPage == item ? "active" : "")"><a class="page-link" data-number-page="@item">@item</a></li>
+                                    }
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-@section ScriptPage {
-    <script src="~/plugins/datatable/js/jquery.dataTables.min.js"></script>
+@section ScriptPage
+{
+    <script src="~/plugins/select2/js/select2.min.js" asp-append-version="true"></script>
     <script>
-        $(document).ready(function () {
-            $('#table-products').DataTable();
+        $('#single-select-categories').select2({
+            width: '100%',
+            theme: 'bootstrap4',
+            placeholder: $(this).data('placeholder'),
+            allowClear: Boolean($(this).data('allow-clear')),
+            ajax: {
+                url: '/Admin/Products/Categories',
+                type: 'post',
+                data: function (obj) {
+                    return { searchString: obj.term };
+                },
+                dataType: 'json',
+                processResults: function (data, params) {
+                    return {
+                        results: data.results
+                    };
+                },
+                success: function (data) {
+                    if (data.results !== 'undefined') {
+                        let options = "";
+
+                        $.each(data.results, function (i, value) {
+                            options += '<option value="' + value.id + '">' + value.text + '</option>';
+                        })
+
+                        $('#single-select-categories').html();
+                        $('#single-select-categories').html(options);
+
+                        $('#single-select-categories').trigger('change');
+                    }
+                }
+            }
+        });
+
+        $('#single-select-manufacturers').select2({
+            width: '100%',
+            theme: 'bootstrap4',
+            placeholder: $(this).data('placeholder'),
+            allowClear: Boolean($(this).data('allow-clear')),
+            ajax: {
+                url: '/Admin/Products/Manufacturers',
+                type: 'post',
+                data: function (obj) {
+                    return { searchString: obj.term };
+                },
+                dataType: 'json',
+                processResults: function (data, params) {
+                    return {
+                        results: data.results
+                    };
+                },
+                success: function (data) {
+                    if (data.results !== 'undefined') {
+                        let options = "";
+
+                        $.each(data.results, function (i, value) {
+                            options += '<option value="' + value.id + '">' + value.text + '</option>';
+                        })
+
+                        $('#single-select-manufacturers').html();
+                        $('#single-select-manufacturers').html(options);
+
+                        $('#single-select-manufacturers').trigger('change');
+                    }
+                }
+            }
+        });
+
+        $('input[type="submit"]').on('click', function (e) {
+            $('#input-hidden-number-page').val(1);
+            $('form').submit();
+        });
+
+        $('.page-link').each(function () {
+            $(this).on('click', function (e) {
+                $('#input-hidden-number-page').val($(this).attr('data-number-page'));
+                $('form').submit();
+            });
         });
     </script>
 }
