--- a/Electro.WebApplication/Areas/Admin/Views/SectionsCharacteristics/Index.cshtml
+++ b/Electro.WebApplication/Areas/Admin/Views/SectionsCharacteristics/Index.cshtml
@@ -25,6 +25,53 @@
                     </nav>
                 </div>
             </div>
+            <div class="card radius-15">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4 class="mb-0">Фильтры</h4>
+                    </div>
+                    <hr />
+                    <div class="form-body">
+                        <form method="post" action="/Admin/SectionsCharacteristics/Index">
+                            <input id="input-hidden-number-page" type="hidden" asp-for="@Model.Filters.NumberPage" />
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Показать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.ItemsPerPage">
+                                        @foreach (var limit in Model.Limits)
+                                        {
+                                            <option value="@limit">@limit</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Сортировать по</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" asp-for="@Model.Filters.SortingOption">
+                                        @for (int i = 0; i < Model.SortingOptions.Count; i++)
+                                        {
+                                            <option value="@Model.SortingOptions.ElementAt(i).Key">@Model.SortingOptions.ElementAt(i).Value</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Строка поиска</label>
+                                <div class="col-sm-10">
+                                    <input id="input-text-search-string" type="text" class="form-control" asp-for="@Model.Filters.SearchString" />
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="submit" class="btn btn-light px-4" value="Применить" />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">
@@ -44,57 +91,80 @@
                     </div>
                     <hr />
                     <div class="table-responsive">
-                        <table id="table-section-characteristics" class="table table-striped table-bordered" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Наименование</th>
-                                    <th>Действия</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var sectionCharacteristic in Model.SectionCharacteristics)
-                                {
-                                    <tr>
-                                        <td>@sectionCharacteristic.Name</td>
-                                        <td>
-                                            <div class="btn-group pull-right">
-                                                <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Save" asp-route-id="@sectionCharacteristic.Id">
-                                                    <button class="btn btn-sm btn-default">
-                                                        <span class="fa fa-edit">
+                        <div id="table-categories_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="table-section-characteristics" class="table table-striped table-bordered" style="width:100%">
+                                        <thead>
+                                            <tr>
+                                                <th>Наименование</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var sectionCharacteristic in Model.SectionCharacteristics)
+                                            {
+                                                <tr>
+                                                    <td>@sectionCharacteristic.Name</td>
+                                                    <td>
+                                                        <div class="btn-group pull-right">
+                                                            <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Save" asp-route-id="@sectionCharacteristic.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-edit">
 
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                                <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Delete" asp-route-id="@sectionCharacteristic.Id">
-                                                    <button class="btn btn-sm btn-default">
-                                                        <span class="fa fa-trash">
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                            <a asp-area="Admin" asp-controller="SectionsCharacteristics" asp-action="Delete" asp-route-id="@sectionCharacteristic.Id">
+                                                                <button class="btn btn-sm btn-default">
+                                                                    <span class="fa fa-trash">
 
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th>Наименование</th>
-                                    <th>Действия</th>
-                                </tr>
-                            </tfoot>
-                        </table>
+                                                                    </span>
+                                                                </button>
+                                                            </a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th>Наименование</th>
+                                                <th>Действия</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </div>
+                            <nav class="d-md-flex justify-content-between align-items-center border-top pt-3" aria-label="Page navigation example">
+                                <div class="text-center text-md-left mb-3 mb-md-0 dataTables_info">@Model.Pagination.GetFormattedStringRange()</div>
+                                <ul class="pagination mb-0 pagination-shop justify-content-center justify-content-md-start">
+                                    @foreach (var item in Model.Pagination.GeneratePagination())
+                                    {
+                                        <li class="paginate_button page-item @(Model.Pagination.NumberPage == item ? "active" : "")"><a class="page-link" data-number-page="@item">@item</a></li>
+                                    }
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-@section ScriptPage {
-    <script src="~/plugins/datatable/js/jquery.dataTables.min.js"></script>
+@section ScriptPage 
+{
     <script>
-        $(document).ready(function () {
-            $('#table-section-characteristics').DataTable();
+        $('input[type="submit"]').on('click', function (e) {
+            $('#input-hidden-number-page').val(1);
+            $('form').submit();
+        });
+
+        $('.page-link').each(function () {
+            $(this).on('click', function (e) {
+                $('#input-hidden-number-page').val($(this).attr('data-number-page'));
+                $('form').submit();
+            });
         });
     </script>
 }
