--- a/Electro.WebApplication/Views/Catalog/Products.cshtml
+++ b/Electro.WebApplication/Views/Catalog/Products.cshtml
@@ -87,7 +87,7 @@
                 <nav class="px-3 flex-horizontal-center text-gray-20 d-none d-xl-flex">
                     <form method="post" class="min-width-50 mr-1">
                         <input id="input-number-number-page" size="2" min="1" max="@Model.Pagination.MaxNumberPage" step="1" type="number" class="form-control text-center px-2 height-35" value="@Model.Pagination.NumberPage">
-                    </form> of @Model.Pagination.MaxNumberPage
+                    </form> из @Model.Pagination.MaxNumberPage
                     <a id="link-show-page" class="text-gray-30 font-size-20 ml-2" href="#">→</a>
                 </nav>
             </div>
