--- a/Electro.WebApplication/Views/Shared/_ProductRowSmallPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/_ProductRowSmallPartial.cshtml
@@ -29,7 +29,10 @@
                         </a>
                     </div>
                     <div class="font-size-12 p-0 text-gray-110 mb-4 d-none d-md-block">
-                        @String.Join(',', Model.CharacteristicsValues.Select(product => product.CharacteristicCategoryValue.Value))
+                        @if (Model.CharacteristicsValues != null ? Model.CharacteristicsValues.Count > 0 : false)
+                        {
+                            @String.Join(',', Model.CharacteristicsValues.Select(product => product.CharacteristicCategoryValue.Value))
+                        }
                     </div>
                 </div>
             </div>
