--- a/Electro.WebApplication/Views/Shared/_HeaderSidebarPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/_HeaderSidebarPartial.cshtml
@@ -72,6 +72,9 @@
                                 <a class="u-header-collapse__nav-link font-weight-bold" asp-area="" asp-controller="Catalog" asp-action="Index">Каталог</a>
                             </li>
                             <li class="">
+                                <a class="u-header-collapse__nav-link font-weight-bold" asp-area="" asp-controller="Manufacturers" asp-action="Index">Производители</a>
+                            </li>
+                            <li class="">
                                 <a class="u-header-collapse__nav-link font-weight-bold" href="#">Магазины</a>
                             </li>
                             <li class="">
