--- a/Electro.WebApplication/Views/Shared/_LogoSearchHeaderIconsPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/_LogoSearchHeaderIconsPartial.cshtml
@@ -73,12 +73,12 @@
             <!-- End Logo-offcanvas-menu -->
             <!-- Search Bar -->
             <div class="col d-none d-xl-block">
-                <form class="js-focus-state">
+                <form class="js-focus-state" method="get" asp-area="" asp-controller="Search" asp-action="Index">
                     <label class="sr-only" for="searchproduct">Поиск</label>
                     <div class="input-group">
-                        <input type="search" class="form-control py-2 pl-5 font-size-15 border-right-0 height-40 border-width-2 rounded-left-pill border-primary" id="searchproduct-item" placeholder="Поиск товаров" aria-label="Поиск товаров" aria-describedby="searchProduct1" required>
+                        <input type="search" class="form-control py-2 pl-5 font-size-15 border-right-0 height-40 border-width-2 rounded-left-pill border-primary" id="searchproduct-item" placeholder="Поиск товаров" name="searchString" aria-label="Поиск товаров" aria-describedby="searchProduct1" required>
                         <div class="input-group-append">
-                            <button class="btn btn-primary height-40 py-2 px-3 rounded-right-pill" type="button" id="searchProduct1">
+                            <button class="btn btn-primary height-40 py-2 px-3 rounded-right-pill" type="submit" id="searchProduct1">
                                 <span class="ec ec-search font-size-24"></span>
                             </button>
                         </div>
@@ -111,10 +111,10 @@
 
                             <!-- Input -->
                             <div id="searchClassic" class="dropdown-menu dropdown-unfold dropdown-menu-right left-0 mx-2" aria-labelledby="searchClassicInvoker">
-                                <form class="js-focus-state input-group px-3">
-                                    <input class="form-control" type="search" placeholder="Поиск товаров">
+                                <form class="js-focus-state input-group px-3" method="get" asp-area="" asp-controller="Search" asp-action="Index">
+                                    <input class="form-control" type="search" placeholder="Поиск товаров" name="searchString">
                                     <div class="input-group-append">
-                                        <button class="btn btn-primary px-3" type="button"><i class="font-size-18 ec ec-search"></i></button>
+                                        <button class="btn btn-primary px-3" type="submit"><i class="font-size-18 ec ec-search"></i></button>
                                     </div>
                                 </form>
                             </div>
