--- a/Electro.WebApplication/Views/Shared/_SecondaryMenuPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/_SecondaryMenuPartial.cshtml
@@ -10,6 +10,11 @@
                     <a class="nav-link u-header__nav-link" asp-area="" asp-controller="Catalog" asp-action="Index">Каталог</a>
                 </li>
                 <!-- End Catalog -->
+                <!-- Manufacturers -->
+                <li class="nav-item u-header__nav-item">
+                    <a class="nav-link u-header__nav-link" asp-area="" asp-controller="Manufacturers" asp-action="Index">Производители</a>
+                </li>
+                <!-- End Manufacturers -->
                 <!-- Shops -->
                 <li class="nav-item u-header__nav-item">
                     <a class="nav-link u-header__nav-link" href="#">Магазины</a>
