--- a/Electro.WebApplication/Views/Cart/Index.cshtml
+++ b/Electro.WebApplication/Views/Cart/Index.cshtml
@@ -2,6 +2,22 @@
 @{
     ViewData["Title"] = "Корзина";
 }
+@section StylePage
+{
+    <style>
+        .d-md-table-cell .image-container {
+            height: 100px;
+            height: 100px;
+            overflow: hidden;
+        }
+
+            .d-md-table-cell .image-container .img-fluid {
+                width: 100% !important;
+                height: 100% !important;
+                object-fit: contain !important;
+            }
+    </style>
+}
 <!-- ========== MAIN CONTENT ========== -->
 <main id="content" role="main" class="cart-page">
     <!-- breadcrumb -->
@@ -46,7 +62,9 @@
                                     <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@product.Key.Id" class="text-gray-32 font-size-26">×</a>
                                 </td>
                                 <td class="d-none d-md-table-cell">
-                                    <a style="width: 100px; height: 100px; overflow: hidden;" asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@product.Key.Id"><img @*class="img-fluid max-width-100 p-1 border border-color-1"*@ class="max-width-100 p-1 border border-color-1" style="width: 100%; height: 100%; object-fit: contain;" src="@(product.Key.MainPhoto?.GetPhotoUrl())" alt="Image Description"></a>
+                                    <a class="image-container" asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@product.Key.Id">
+                                        <img class="img-fluid max-width-100 p-1 border border-color-1" src="@(product.Key.MainPhoto?.GetPhotoUrl())" alt="Image Description">
+                                    </a>
                                 </td>
 
                                 <td data-title="Товар">
