--- a/Electro.WebApplication/Views/Compare/Index.cshtml
+++ b/Electro.WebApplication/Views/Compare/Index.cshtml
@@ -2,6 +2,21 @@
 @{
     ViewData["Title"] = "Сравнить";
 }
+@section StylePage
+{
+    <style>
+        .product-compare-image .image-container {
+            height: 200px;
+            overflow: hidden;
+        }
+
+            .product-compare-image .image-container .img-fluid {
+                width: 100% !important;
+                height: 100% !important;
+                object-fit: contain !important;
+            }
+    </style>
+}
 <!-- ========== MAIN CONTENT ========== -->
 <main id="content" role="main">
     <!-- breadcrumb -->
@@ -32,8 +47,8 @@
                             <td>
                                 <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@product.Id" class="product d-block">
                                     <div class="product-compare-image">
-                                        <div class="d-flex mb-3" style="height: 200px; overflow: hidden;">
-                                            <img @*class="img-fluid mx-auto"*@ class="mx-auto" style="width: 100%; height: 100%; object-fit: contain;" src="@(product.MainPhoto?.GetPhotoUrl())" alt="Image Description">
+                                        <div class="d-flex mb-3 image-container">
+                                            <img class="img-fluid mx-auto" src="@(product.MainPhoto?.GetPhotoUrl())" alt="Image Description">
                                         </div>
                                     </div>
                                     <h3 class="product-item__title text-blue font-weight-bold mb-3">@product.Model</h3>
