--- a/Electro.WebApplication/Views/Manufacturer/Index.cshtml
+++ b/Electro.WebApplication/Views/Manufacturer/Index.cshtml
@@ -10,7 +10,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3 flex-nowrap flex-xl-wrap overflow-auto overflow-xl-visble">
                     <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
-                    <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1">Производители</li>
+                    <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a asp-area="" asp-controller="Manufacturers" asp-action="Index">Производители</a></li>
                     <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1 active" aria-current="page">@Model.Manufacturer.Name</li>
                 </ol>
             </nav>
