--- a/Electro.WebApplication/Views/Manufacturers/Index.cshtml
+++ b/Electro.WebApplication/Views/Manufacturers/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model Category
+﻿@model ManufacturersViewModel
 @{
-    ViewData["Title"] = Model.Name;
+    ViewData["Title"] = "Производители";
 }
 @section StylePage
 {
@@ -16,7 +16,7 @@
                 object-fit: contain !important;
             }
     </style>
-}
+} 
 <!-- breadcrumb -->
 <div class="bg-gray-13 bg-md-transparent">
     <div class="container">
@@ -25,9 +25,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3 flex-nowrap flex-xl-wrap overflow-auto overflow-xl-visble">
                     <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
-                    <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a asp-area="" asp-controller="Catalog" asp-action="Index">Каталог</a></li>
-                    @await Component.InvokeAsync(typeof(CatalogBreadcrumb), Model.ParentId)
-                    <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1 active" aria-current="page">@Model.Name</li>
+                    <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1 active" aria-current="page">Производители</li>
                 </ol>
             </nav>
         </div>
@@ -39,22 +37,22 @@
 <div class="container">
     <div class="mb-6">
         <div class="d-flex justify-content-between align-items-center border-bottom border-color-1 flex-lg-nowrap flex-wrap mb-4">
-            <h3 class="section-title section-title__full mb-0 pb-2 font-size-22">@Model.Name</h3>
+            <h3 class="section-title section-title__full mb-0 pb-2 font-size-22">Производители</h3>
         </div>
         <ul class="row list-unstyled products-group no-gutters mb-6">
-            @foreach (var category in Model.Children)
+            @foreach (var manufacturer in Model.Manufacturers)
             {
                 <li class="col-6 col-md-2 product-item">
                     <div class="product-item__outer h-100 w-100">
                         <div class="product-item__inner px-xl-4 p-3">
                             <div class="product-item__body pb-xl-2">
                                 <div class="mb-2">
-                                    <a href="@((category.Children != null ? category.Children.Count > 0 : false) ? $"/Catalog/{category.Id}" : $"/Catalog/{category.Id}/Products")" class="d-block text-center image-container">
-                                        <img class="img-fluid" src="@(category.Photo?.GetPhotoUrl())" alt="Image Description">
+                                    <a class="d-block text-center image-container" asp-area="" asp-controller="Manufacturer" asp-action="Index" asp-route-manufacturerId="@manufacturer.Id">
+                                        <img class="img-fluid" src="@(manufacturer.Logo?.GetPhotoUrl())" alt="Image Description">
                                     </a>
                                 </div>
                                 <h5 class="text-center mb-1 product-item__title">
-                                    <a href="@((category.Children != null ? category.Children.Count > 0 : false) ? $"/Catalog/{category.Id}" : $"/Catalog/{category.Id}/Products")" class="font-size-15 text-gray-90">@category.Name</a>
+                                    <a asp-area="" asp-controller="Manufacturer" asp-action="Index" asp-route-manufacturerId="@manufacturer.Id" class="font-size-15 text-gray-90">@manufacturer.Name</a>
                                 </h5>
                             </div>
                         </div>
@@ -62,6 +60,17 @@
                 </li>
             }
         </ul>
+        <!-- Manufacturers Pagination -->
+        <nav class="d-md-flex justify-content-between align-items-center border-top pt-3" aria-label="Page navigation example">
+            <div class="text-center text-md-left mb-3 mb-md-0">@Model.Pagination.GetFormattedStringRange()</div>
+            <ul class="pagination mb-0 pagination-shop justify-content-center justify-content-md-start">
+                @foreach (var item in Model.Pagination.GeneratePagination())
+                {
+                    <li class="page-item"><a class="page-link @(Model.Pagination.NumberPage == item ? "current" : "")" asp-area="" asp-controller="Manufacturers" asp-action="Index" asp-route-numberPage="@item">@item</a></li>
+                }
+            </ul>
+        </nav>
+        <!-- End Manufacturers Pagination -->
     </div>
 </div>
 @section ScriptPage
