--- a/Electro.WebApplication/Views/Shared/_ProductRowSmallPartial.cshtml
+++ b/Electro.WebApplication/Views/Shared/_ProductRowSmallPartial.cshtml
@@ -4,8 +4,8 @@
         <div class="product-item__inner remove-prodcut-hover py-4 row">
             <div class="product-item__header col-6 col-md-4">
                 <div class="mb-2">
-                    <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@Model.Id" class="d-block text-center" style="height: 200px; overflow: hidden;">
-                        <img @*class="img-fluid"*@ style="width: 100%; height: 100%; object-fit: contain;" src="@(Model.MainPhoto?.GetPhotoUrl())" alt="Image Description">
+                    <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-productId="@Model.Id" class="d-block text-center image-container h-200">
+                        <img class="img-fluid" src="@(Model.MainPhoto?.GetPhotoUrl())" alt="Image Description">
                     </a>
                 </div>
             </div>
